#38 Initial implementation of CLI utility